--- a/frontend/CSS/folder.css
+++ b/frontend/CSS/folder.css
@@ -2,6 +2,8 @@
     background-color: #9bd4e4;
     width: 100%;
     height: 5em;
+    border-radius: 0 0 7px 7px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .4);
     display: flex;
     align-items: center;
     justify-content: center;
