--- a/frontend/CSS/linkArea.css
+++ b/frontend/CSS/linkArea.css
@@ -1,6 +1,8 @@
 .add-link-area{ 
     width: 18em;
     height: 25em;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, .5);
     background-color: white;
     position: relative;
     position: sticky;
