--- a/frontend/CSS/sidebar.css
+++ b/frontend/CSS/sidebar.css
@@ -1,11 +1,13 @@
 .sidebar {
     width: 10em;
     height: 25em;
+    padding: 5px 3px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, .5);
     background-color: white;
     position: sticky;
     left: 1.5em;
     top: calc(50% - 10em);
-    padding: 5px 3px;
 }
 
 .sidebar > ul {
