--- a/frontend/CSS/page.css
+++ b/frontend/CSS/page.css
@@ -24,6 +24,18 @@ header {
     top: 0;
     z-index: 2;
 }
+.logo-area {
+    height: 100%;
+    position: relative;
+}
+.logo-area > img {
+    position: absolute;
+    height: 6em;
+    bottom: 0;
+    left: 1em;
+    transform: translateY(35%);
+}
+
 main {
     padding: 0 1em 0;
     display: flex;
