--- a/frontend/CSS/linkArea.css
+++ b/frontend/CSS/linkArea.css
@@ -8,12 +8,109 @@
     position: sticky;
     right: 1.5em;
     top: calc(50% - 10em);
+    padding: 15px;
+    overflow: hidden;
 }
+
+.before-add-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4em;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(221, 221, 221)
+}
+
+.textLink{
+    font-size: 1.7rem;
+    font-weight: bold;
+}
+
+.circleLink{
+    border-radius: 50%;
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0px 1px 9px rgba(0, 0, 0, .5);
+    transition: 0.2s ease-in-out;
+}
+.circleLink > img {
+    width: 4.5em;
+    height: 4.5em;
+}
+
+.before-add-link:hover .circleLink{
+    box-shadow: none;
+}
+
 .adding-link {
     position: absolute;
     visibility: hidden;
 }
 
-.before-add-link {
+.adding-link > form {
+    height: 20em;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.adding-link > button {
+    width: 25px;
+    height: 25px;
+    background-color: rgb(221, 221, 221);
+    font-size: larger;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.adding-link > form > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.adding-link > form > div > input{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
+    width: 100%;
+    font-size: 1rem;
+}
+
+.adding-link > form > select{
+    font-size: 1.1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.register-link {
+    padding: 4px;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    border: none;
+    background-color: rgb(221, 221, 221);
+    cursor: pointer;
+    box-shadow: -3px 3px 7px rgba(0, 0, 0, .5);
+    transition: .2s ease-in-out;
+    font-weight: bold;
+}
+
+.register-link:active {
+    box-shadow: none;
 }
