--- a/frontend/CSS/card.css
+++ b/frontend/CSS/card.css
@@ -1,6 +1,6 @@
 .card {
-    min-width: calc(100%/3.5);
-    width: calc(100%/3.5);
+    min-width: calc(100%/3.3);
+    width: calc(100%/3.3);
     margin: 10px;
     border-radius: 7px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, .7);
@@ -10,12 +10,13 @@
     flex-direction: column;
 }
 
-.card > div >  form > button{
+.card>div>form>button,
+.trash-icon-area>form>button {
     background-color: transparent;
     border: none;
 }
 
-.card > div > a, .footer-card > div > a {
+.search-footer>div>a, .header-card>a{
     text-decoration: none;
     font-weight: bold;
     color: #0784b5;
@@ -29,12 +30,12 @@
     font-size: 1rem;
 }
 
-.header-card > form > button > img {
+.header-card>form>button>img {
     width: 32px;
     cursor: pointer;
 }
 
-.header-card > img {
+.header-card>img {
     width: 32px;
 }
 
@@ -44,7 +45,7 @@
     gap: .4em;
 }
 
-.content-card > img {
+.content-card>img {
     width: 100%;
 }
 
@@ -52,15 +53,33 @@
     display: flex;
 }
 
-.footer-card > div {
-    flex: 1;
+.search-footer {
+    display: flex;
+    width: 85%;
+}
+
+.search-footer>div {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 5px;
+    width: calc(100%/2);
 }
 
-.footer-card > form > button > img {
+.search-footer > div > a {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.trash-icon-area {
+    width: calc(100%/3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.trash-icon-area>form>button>img {
     width: 30px;
     cursor: pointer;
 }
