--- a/frontend/CSS/page.css
+++ b/frontend/CSS/page.css
@@ -66,6 +66,7 @@ main {
     border-bottom: 1px solid #0784b5;
     font-size: 1.1rem;
     transition: .1s ease-in-out;
+    cursor: pointer;
 }
 
 .header-action > form > input:hover {
