--- a/frontend/CSS/linkArea.css
+++ b/frontend/CSS/linkArea.css
@@ -23,7 +23,7 @@
     gap: 4em;
     border: none;
     cursor: pointer;
-    background-color: rgb(221, 221, 221)
+    background-color: var(--gray)
 }
 
 .textLink{
@@ -68,7 +68,7 @@
 .adding-link > button {
     width: 25px;
     height: 25px;
-    background-color: rgb(221, 221, 221);
+    background-color: var(--gray);
     font-size: larger;
     display: flex;
     align-items: center;
@@ -104,7 +104,7 @@
     border-radius: 5px;
     font-size: 1.1rem;
     border: none;
-    background-color: rgb(221, 221, 221);
+    background-color: var(--gray);
     cursor: pointer;
     box-shadow: -3px 3px 7px rgba(0, 0, 0, .5);
     transition: .2s ease-in-out;
